# intServer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: flags.cmake
littleTests/: test  test.cpp
littleTests/nbt/: nbt.hpp
src/: intServer.cpp
src/base/: common.hpp
src/base/io/: log.hpp
src/base/math/: vec.hpp
src/base/network/: clientHandler.hpp  networkMain.hpp  packetReader.hpp  packetWriter.hpp
src/base/network/packetHandlers/: RecvPacket0x05_ClientSettings.hpp  SendPacket0x0D_ServerDifficulty.hpp  SendPacket0x24_JoinGame.hpp  SendPacket0x3F_HeldItemChange.hpp  SendPacket0x5A_DeclareRecipes.hpp  SendPacket0x5B_Tags.hpp  handlePacketStage1Id0x00.hpp  handlePacketStage1Id0x01.hpp  handlePacketStage1Id0x7F.hpp  handlePacketStage2Id0x00.hpp
src/config/: config.hpp
src/player/: player.hpp
src/world/: chunk.hpp  world.hpp
src/world/dim/: dim.hpp  player.hpp
src/world/dim/chunk/: chunk.hpp
src/world/dim/chunk/biome/: biome.hpp
src/world/dim/chunk/block/: block.hpp
src/world/item/: item.hpp  itemStack.hpp  itemStackGroup.hpp
